[gd_scene load_steps=15 format=3 uid="uid://7th7lg6roqn0"]

[ext_resource type="PackedScene" uid="uid://dmtyjgyt1ny5m" path="res://enemies/enemy.tscn" id="1_nepjt"]
[ext_resource type="Texture2D" uid="uid://bbsibc1b8iyjb" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet.png" id="2_fpc4g"]
[ext_resource type="Texture2D" uid="uid://cso3dp8utq6dc" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet.png" id="2_ihstf"]
[ext_resource type="Texture2D" uid="uid://dafimx4e16xxd" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet.png" id="2_usujy"]
[ext_resource type="Script" path="res://enemies/boar.gd" id="2_wd45t"]
[ext_resource type="Texture2D" uid="uid://dcoqff0gdh657" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Walk/Walk-Base-Sheet.png" id="4_rlov0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ht2x0"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1do2"]
size = Vector2(35, 7)

[sub_resource type="Animation" id="Animation_ulpuj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fpc4g")]
}

[sub_resource type="Animation" id="Animation_1q32j"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_usujy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 192, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16.1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_m14ru"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ihstf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 192, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16.1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2]
}

[sub_resource type="Animation" id="Animation_f3sye"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fpc4g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 288, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16.1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_0s3xy"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rlov0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 288, 32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2htdf"]
_data = {
"RESET": SubResource("Animation_ulpuj"),
"hit": SubResource("Animation_1q32j"),
"idle": SubResource("Animation_m14ru"),
"run": SubResource("Animation_f3sye"),
"walk": SubResource("Animation_0s3xy")
}

[node name="Boar" instance=ExtResource("1_nepjt")]
script = ExtResource("2_wd45t")

[node name="Sprite2D" type="Sprite2D" parent="Graphics" index="0"]
position = Vector2(0, -16.1)
scale = Vector2(1, 0.997358)
texture = ExtResource("2_fpc4g")
hframes = 6
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 288, 32)

[node name="WallChecker" type="RayCast2D" parent="Graphics" index="1"]
position = Vector2(-9, -15)
target_position = Vector2(-12, 0)

[node name="FloorChecker" type="RayCast2D" parent="Graphics" index="2"]
position = Vector2(-13, -1)
target_position = Vector2(0, 5)

[node name="PlayerChecker" type="RayCast2D" parent="Graphics" index="3"]
position = Vector2(-9, -15)
target_position = Vector2(-85, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HitBox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_ht2x0")
debug_color = Color(0.976471, 0.152941, 0, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Graphics/HitBox" index="1"]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_c1do2")
debug_color = Color(0.956863, 0, 0.533333, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HurtBox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_ht2x0")
debug_color = Color(0.976471, 0.152941, 0, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Graphics/HurtBox" index="1"]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_c1do2")
debug_color = Color(0.956863, 0, 0.533333, 0.419608)

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_2htdf")
}

[node name="CalmdownTimer" type="Timer" parent="." index="4"]

[node name="Stats" parent="." index="5"]
max_health = 5

[connection signal="hurt" from="Graphics/HurtBox" to="." method="_on_hurt_box_hurt"]
